feat(no-ref): update integration competency level update integration competency level
